fix: credential values fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=app
 server.port=9091
 #spring.datasource.name=test
-spring.datasource.url=jdbc:mysql://localhost:3306/blogbootapp?useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=@Adhalrao9112
+spring.datasource.url=jdbc:mysql://localhost:3306/<your database name>?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=//your username
+spring.datasource.password=//yuor password
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
